# docs/swagger.yaml
@@ -17,6 +17,23 @@ definitions:
       token:
         type: string
     type: object
+  endpoint.RefreshTokenRequest:
+    properties:
+      refresh:
+        type: string
+      token:
+        type: string
+    required:
+    - refresh
+    - token
+    type: object
+  endpoint.RefreshTokenResponse:
+    properties:
+      refresh:
+        type: string
+      token:
+        type: string
+    type: object
   middleware.customError:
     properties:
       message:
@@ -53,6 +70,37 @@ paths:
           schema:
             $ref: '#/definitions/middleware.customError'
       summary: Get access token with provided GUID
+      tags:
+      - token
+  /v1/token/refresh:
+    post:
+      parameters:
+      - description: Refreshed pair token-refresh
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/endpoint.RefreshTokenRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/endpoint.RefreshTokenResponse'
+        "400":
+          description: Received bad request
+          schema:
+            $ref: '#/definitions/middleware.customError'
+        "409":
+          description: Client trying to authorize with different IP address
+          schema:
+            $ref: '#/definitions/middleware.customError'
+        "500":
+          description: Internal error occured
+          schema:
+            $ref: '#/definitions/middleware.customError'
+      summary: Updates token with provided refresh token
       tags:
       - token
 securityDefinitions:
